workshop/bookinfo/1.0/routing/requestauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: bookinfo-jwt
  namespace: bookinfo
spec:
  selector:
    matchLabels:
      app: productpage
  jwtRules:
  - issuer: "https://keycloak.mycompany.com/realms/myrealm"
    jwksUri: "https://keycloak.mycompany.com/realms/myrealm/protocol/openid-connect/certs"
    fromHeaders:
    - name: Authorization
      prefix: "Bearer "
    fromParams:
    - "access_token"
    jwksFetchTimeout: 5s
    forwardOriginalToken: true
