workshop/bookinfo/1.0/routing/httproute-ab-header-split.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reviews-ab-header
  namespace: bookinfo
spec:
  parentRefs:
  - kind: Service
    group: ""
    name: reviews
    namespace: bookinfo
  rules:

  - matches:
    - headers:
      - name: x-user-group
        value: beta-testers
    backendRefs:
    - name: reviews-v2
      port: 9080
      weight: 100

  - backendRefs:
    - name: reviews-v1
      port: 9080
      weight: 100
