workshop/bookinfo/1.0/routing/authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: details-l7-policy
  namespace: bookinfo
spec:
  selector:
    matchLabels:
      app: details
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
          - "cluster.local/ns/bookinfo/sa/bookinfo-productpage"
    to:
    - operation:
        methods: ["GET"]
        paths: ["/details/*"]
